"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-02-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-10:
	  Finally, committed DECOUPLE_INSTANCE_REFERENCE_HIERARCHY -> 1, 
		(-1400 LoC).  This accomplishes the primary branch objective.
	  Only little more clean-up and checking before merging.  


	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-09:
	  Committed ENABLE_STATIC_COMPILE_CHECKS -> 0, and
		ENABLE_STATIC_DIMENSION_ANALYSIS -> 0, (-1500 LoC).
		There goes a lot of old commented code...


	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-08:
	  Committed WANT_IS_TEMPLATE_DEPENDENT -> 0, (-650 LoC).


2006-02-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-07:
	  Committed SUBTYPE_PORT_CONNECTION -> 1, (-250 LoC).


	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-06:
	  Committed WANT_PARAM_INSTANTIATION_STATEMENT_BASE -> 0.  (-100 LoC)


	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-05:
	  The axe-man cometh!
	  First of several phases of committing code cuts.  
	  Committed UNIFY_UNROLL_PASS -> 1.  (-250 LoC)


	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-04:
	  Tiny patch to improve an error message on formal/actual mismatch.  
	  Repaired last test case, and added one more template/080.hac.
	  With this patch, the source now passes make check and distcheck.


	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-03:
	  All remaining test directories updated, after re-verification.
		What a pain in the asterisk.  
	  Remains only one test case, waiting for better diagnostic message.


	* HACKT-00-01-04-main-00-77-8-aggregate-01-02-ref-02:
	  Fixed minor bug in assigning value to member of value collection.  
	  Round of test updates in basic, param, namespace.  
	  Round of source clean-up.  

