@@ -1,7 +1,7 @@
 /**
 	\file "AST/expr.cc"
 	Class method definitions for HAC::parser, related to expressions.  
-	$Id: expr.cc,v 1.5.2.2.2.2 2006/02/18 08:29:04 fang Exp $
+	$Id: expr.cc,v 1.5.2.2.2.3 2006/02/18 21:47:27 fang Exp $
 	This file used to be the following before it was renamed:
 	Id: art_parser_expr.cc,v 1.27.12.1 2005/12/11 00:45:05 fang Exp
  */
@@ -31,7 +31,6 @@
 #include "Object/def/definition_base.h"
 #include "Object/ref/aggregate_meta_value_reference.h"
 #include "Object/ref/aggregate_meta_instance_reference.h"
-#include "Object/ref/simple_datatype_meta_instance_reference_base.h"
 #include "Object/ref/simple_meta_instance_reference.h"
 #include "Object/ref/simple_nonmeta_instance_reference_base.h"
 #include "Object/ref/meta_instance_reference_subtypes.h"
