@@ -3,13 +3,13 @@
 	Declarations for classes related to connection of 
 	assignments of parameters.
 	This file came from "Object/art_object_assign.h" in a previous life.  
-	$Id: expression_assignment.h,v 1.7.10.1.2.3 2006/02/18 03:20:48 fang Exp $
+	$Id: expression_assignment.h,v 1.7.10.1.2.4 2006/02/18 21:47:32 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_UNROLL_EXPRESSION_ASSIGNMENT_H__
 #define	__HAC_OBJECT_UNROLL_EXPRESSION_ASSIGNMENT_H__
 
-#include <list>
+#include <vector>
 #include "Object/unroll/param_expression_assignment.h"
 #include "Object/traits/class_traits.h"
 #include "util/memory/list_vector_pool_fwd.h"
@@ -17,7 +17,6 @@
 namespace HAC {
 namespace entity {
 struct expr_dump_context;
-using std::list;
 USING_CONSTRUCT
 
 //=============================================================================
@@ -38,15 +37,13 @@ public:
 							parent_type;
 	typedef	typename traits_type::simple_meta_value_reference_type
 							value_reference_type;
-	typedef	typename traits_type::expr_base_type
-							expr_type;
-	typedef	typename traits_type::const_expr_type
-							const_expr_type;
+	typedef	typename traits_type::expr_base_type	expr_type;
+	typedef	typename traits_type::const_expr_type	const_expr_type;
 	typedef	typename traits_type::const_collection_type
 							const_collection_type;
-	typedef	count_ptr<value_reference_type>	dest_ptr_type;
+	typedef	count_ptr<value_reference_type>		dest_ptr_type;
 	typedef	count_ptr<const value_reference_type>	dest_const_ptr_type;
-	typedef	list<dest_const_ptr_type>		dest_list_type;
+	typedef	std::vector<dest_const_ptr_type>	dest_list_type;
 	typedef	count_ptr<expr_type>			src_ptr_type;
 	typedef	count_ptr<const expr_type>		src_const_ptr_type;
 protected:
@@ -58,7 +55,10 @@ private:
 	expression_assignment();
 public:
 	explicit
-	expression_assignment(const src_const_ptr_type& s);
+	expression_assignment(const src_const_ptr_type&);
+
+	explicit
+	expression_assignment(const dest_const_ptr_type&);
 
 	~expression_assignment();
 
