@@ -18,10 +18,17 @@ in state #STATE#, possible rules are:
 acceptable tokens are: 
 	'!' (reduce)
 	'#' (reduce)
+	'%' (reduce)
 	'(' (reduce)
+	'*' (reduce)
+	'+' (reduce)
+	'-' (reduce)
 	'.' (reduce)
+	'/' (reduce)
 	'<' (shift)
 	'=' (reduce)
 	'?' (reduce)
 	'[' (reduce)
 	ID (reduce)
+	INSERT (reduce)
+	EXTRACT (reduce)
